fix: save movie button on mobile

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -145,6 +145,11 @@
         font-size: 12px;
         line-height: 15px;
     }
+
+    .movie-card__button {
+        visibility: visible;
+        opacity: 1;
+    }
 }
 
 @media screen and (max-width: 400px) {
